--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.6",
     "opds-web-client": "0.0.19",
     "react": "^15.2.0",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
