--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "Apache-2.0",
   "scripts": {
     "prepublish": "typings install && npm run prod",
+    "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx",
+    "test": "npm run lint && tsc && mocha lib/**/__tests__/*.js",
     "dev": "rm -rf dist && NODE_ENV=development webpack --watch --progress --display-modules --config webpack.config",
     "prod": "rm -rf dist && NODE_ENV=production webpack -p --progress --display-modules --config webpack.config"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "file-loader": "^0.9.0",
+    "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.2.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
