--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.2.0",
+    "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.13.0",
