--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepublish": "typings install && tsc && npm run prod",
     "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx",
     "test": "npm run lint && tsc && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js",
-    "dev": "rm -rf dist && mkdir dist  && cp node_modules/bootstrap/dist/css/* dist && cp css/* dist && NODE_ENV=development webpack --watch --progress --display-modules --config webpack.config",
-    "prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp css/* dist && NODE_ENV=production webpack -p --progress --display-modules --config webpack.config",
+    "dev": "rm -rf dist && mkdir dist  && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp css/* dist && NODE_ENV=development webpack --watch --progress --display-modules --config webpack.config",
+    "prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp css/* dist && NODE_ENV=production webpack -p --progress --display-modules --config webpack.config",
     "start": "node lib/server/index.js",
     "start-prod": "tsc && npm run prod && npm run start",
     "start-dev": "tsc && npm run dev | npm run start"
@@ -24,7 +24,9 @@
     "enzyme": "^2.3.0",
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
     "react-addons-test-utils": "^15.3.0",
+    "sass-loader": "^4.0.0",
     "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
@@ -39,7 +41,7 @@
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
-    "opds-web-client": "0.0.34",
+    "opds-web-client": "0.0.35",
     "react": "^15.3.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.3.0",
