--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepublish": "typings install && tsc && npm run prod",
     "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx",
     "test": "npm run lint && tsc && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js",
-    "dev": "rm -rf dist && mkdir dist  && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp css/* dist && NODE_ENV=development webpack --watch --progress --display-modules --config webpack.config",
-    "prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp css/* dist && NODE_ENV=production webpack -p --progress --display-modules --config webpack.config",
+    "dev": "rm -rf dist && mkdir dist  && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp -r src/stylesheets lib && NODE_ENV=development webpack --watch --progress --display-modules --config webpack.config",
+    "prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp node_modules/opds-web-client/dist/*.css dist && cp -r src/stylesheets lib && NODE_ENV=production webpack -p --progress --display-modules --config webpack.config",
     "start": "node lib/server/index.js",
     "start-prod": "tsc && npm run prod && npm run start",
     "start-dev": "tsc && npm run dev | npm run start"
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
