Added login with clever and moved configuration to a file.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "prepublish": "typings install && tsc && npm run prod",
-    "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx && sass-lint -c .sass-lint.yml -v -q",
-    "test": "npm run lint && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js",
+    "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx src/**/**/**/*.ts src/**/**/**/*/tsx && sass-lint -c .sass-lint.yml -v -q",
+    "test": "npm run lint && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
     "dev": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && NODE_ENV=development UV_THREADPOOL_SIZE=128 webpack --watch --progress --display-modules --config webpack.config",
     "prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && NODE_ENV=production UV_THREADPOOL_SIZE=128 webpack -p --progress --display-modules --config webpack.config",
     "start": "node lib/server/index.js",
