--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.13.0",
-    "typescript": "^2.0.3",
+    "typescript": "2.0.3",
     "typings": "^1.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
