--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
-    "opds-web-client": "0.1.12",
+    "opds-web-client": "0.1.16",
     "react": "^15.3.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.3.0",
