--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplified-circulation-patron-web",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "patron UI for Circulation Manager",
   "repository": {
     "type": "git",
@@ -9,7 +9,7 @@
   "author": "NYPL",
   "license": "Apache-2.0",
   "scripts": {
-    "prepublish": "typings prune && typings install && tsc && npm run build-prod",
+    "prepublish": "tsc && npm run build-prod",
     "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx src/**/**/**/*.ts src/**/**/**/*/tsx && sass-lint -c .sass-lint.yml -v -q",
     "test": "npm run lint && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
     "build-dev": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && NODE_ENV=development UV_THREADPOOL_SIZE=128 webpack --watch --progress --display-modules --config webpack.config",
@@ -19,13 +19,17 @@
     "dev": "tsc && npm run build-dev | npm run start"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.8",
+    "@types/react": "16.4.7",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.3.0",
+    "enzyme": "^2.9.1",
+    "fetch-mock": "^7.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
-    "node-sass": "^4.5.3",
+    "node-sass": "4.11.0",
     "react-addons-test-utils": "^15.3.0",
     "sass-lint": "^1.9.1",
     "sass-loader": "^4.0.0",
@@ -33,8 +37,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.13.0",
-    "typescript": "2.1.4",
-    "typings": "^1.3.1",
+    "typescript": "2.7.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
@@ -45,7 +48,8 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
     "opds-feed-parser": "^0.0.15",
-    "opds-web-client": "^0.1.25",
+    "opds-web-client": "0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^15.3.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.3.0",
