Updating webpack to v4.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepublish": "tsc && npm run build-prod",
     "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx src/**/**/**/*.ts src/**/**/**/*/tsx && sass-lint -c .sass-lint.yml -v -q",
     "test": "npm run lint && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
-    "build-dev": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && NODE_ENV=development UV_THREADPOOL_SIZE=128 webpack --watch --progress --display-modules --config webpack.config",
-    "build-prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && NODE_ENV=production UV_THREADPOOL_SIZE=128 webpack -p --progress --display-modules --config webpack.config",
+    "build-dev": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && UV_THREADPOOL_SIZE=128 webpack --watch --progress --display-modules --config webpack.dev.config",
+    "build-prod": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && UV_THREADPOOL_SIZE=128 webpack -p --progress --display-modules --config webpack.dev.config",
     "start": "node lib/server/index.js",
     "prod": "tsc && npm run build-prod && npm run start",
     "dev": "tsc && npm run build-dev | npm run start"
@@ -23,23 +23,25 @@
     "@types/node": "^11.13.8",
     "@types/react": "16.4.7",
     "chai": "^3.5.0",
-    "css-loader": "^0.24.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^2.9.1",
     "fetch-mock": "^7.3.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.11.0",
     "react-addons-test-utils": "^15.3.0",
     "sass-lint": "^1.9.1",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
     "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
-    "tslint": "^3.13.0",
+    "ts-loader": "^4.3.1",
+    "tslint": "^3.13.2",
     "typescript": "2.7.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
