--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplified-circulation-patron-web",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "patron UI for Circulation Manager",
   "repository": {
     "type": "git",
@@ -24,13 +24,13 @@
     "@types/react": "16.4.7",
     "chai": "^3.5.0",
     "css-loader": "^2.1.1",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.11.0",
-    "react-addons-test-utils": "^15.3.0",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
@@ -49,15 +49,15 @@
     "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
-    "opds-feed-parser": "^0.0.15",
-    "opds-web-client": "0.2.0",
+    "opds-feed-parser": "0.0.16",
+    "opds-web-client": "0.2.4",
     "prop-types": "^15.7.2",
-    "react": "^15.4.0",
-    "react-bootstrap": "^0.29.5",
-    "react-dom": "^15.4.0",
-    "react-redux": "^4.4.6",
+    "react": "^16.8.6",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
-    "redux": "^3.6.0",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
     "tinycolor2": "^1.4.1",
     "universal-url": "^1.0.1"
