--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router": "^3.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
+    "styled-components": "^4.3.2",
     "tinycolor2": "^1.4.1",
     "universal-url": "^1.0.1"
   }
