adding theme-ui

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "NYPL",
   "license": "Apache-2.0",
   "scripts": {
-    "prepublish": "tsc && npm run build-prod",
     "lint": "tslint -c tslint.json src/*.ts src/*.tsx src/**/*.ts src/**/*.tsx src/**/**/*.ts src/**/**/*.tsx src/**/**/**/*.ts src/**/**/**/*/tsx && sass-lint -c .sass-lint.yml -v -q",
     "test": "npm run lint && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
     "build-dev": "rm -rf dist && mkdir dist && cp node_modules/bootstrap/dist/css/* dist && cp -r src/stylesheets lib && UV_THREADPOOL_SIZE=128 webpack --watch --progress --display-modules --config webpack.dev.config",
@@ -20,8 +19,8 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.8",
-    "@types/react": "16.4.7",
+    "@types/node": "^12.12.3",
+    "@types/react": "^16.9.11",
     "chai": "^3.5.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
@@ -35,10 +34,10 @@
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
     "style-loader": "^0.13.1",
-    "ts-loader": "^4.3.1",
-    "tslint": "^4.0.0",
-    "tslint-react-a11y": "^1.0.0",
-    "typescript": "2.7.2",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.0",
+    "tslint-react-a11y": "^1.1.0",
+    "typescript": "^3.6.4",
     "url-loader": "^0.5.7",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
@@ -48,6 +47,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@mdx-js/react": "^1.5.1",
+    "@types/theme-ui": "^0.2.3",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
@@ -64,6 +64,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
     "styled-components": "^4.3.2",
+    "styled-system": "^5.1.2",
     "theme-ui": "^0.2.46",
     "tinycolor2": "^1.4.1",
     "universal-url": "^1.0.1"
