--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^6.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -67,6 +69,7 @@
     "styled-system": "^5.1.2",
     "theme-ui": "^0.2.46",
     "tinycolor2": "^1.4.1",
+    "tslint-to-eslint-config": "^0.2.11",
     "universal-url": "^1.0.1"
   }
 }
