--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "node lib/server/index.js",
     "prod": "tsc && npm run build-prod && npm run start",
     "dev": "tsc && npm run build-dev | npm run start",
-    "dev:kristo": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib npm run dev"
+    "dev:amigos": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib npm run dev"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.6",
