--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "node lib/server/index.js",
     "prod": "tsc && npm run build-prod && npm run start",
     "dev": "tsc && npm run build-dev | npm run start",
-    "dev:amigos": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib npm run dev"
+    "dev:amigos": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib npm run dev",
+    "dev:wds": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib tsc && node lib/server/index.js"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.6",
@@ -43,6 +44,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
@@ -56,6 +58,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
     "opds-feed-parser": "0.0.16",
+    "opds-web-client": "^0.2.10",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
