--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "prod": "tsc && npm run build-prod && npm run start",
     "dev": "tsc && npm run build-dev | npm run start",
     "dev:amigos": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib npm run dev",
-    "dev:wds": "tsc && SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js"
+    "dev:wds": "tsc && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
+    "start:prod": "tsc && NODE_ENV=production SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -30,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.13.0",
@@ -45,6 +48,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
