--- a/package.json
+++ b/package.json
@@ -21,8 +21,17 @@
     "start:prod": "tsc && NODE_ENV=production SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@hot-loader/react-dom": "^16.11.0",
+    "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
+    "@types/react-router-dom": "^5.1.2",
+    "babel-loader": "^8.0.6",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
@@ -32,10 +41,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.13.0",
+    "react-hot-loader": "^4.12.16",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
@@ -70,6 +81,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
     "styled-components": "^4.3.2",
