--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.11.0",
+    "prettier": "1.19.1",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
