--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
     "@types/react-router-dom": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
     "babel-loader": "^8.0.6",
+    "@types/react": "16.4.7",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^6.6.0",
+    "eslint": "^6.7.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
@@ -57,6 +58,7 @@
     "sinon": "^7.3.0",
     "style-loader": "^0.13.1",
     "typescript": "^3.7.2",
+    "ts-loader": "^4.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
