--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
-    "@types/react-router-dom": "^5.1.2",
-    "babel-loader": "^8.0.6",
     "@types/react": "16.4.7",
+    "@types/react-router-dom": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "babel-loader": "^8.0.6",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
@@ -52,13 +52,14 @@
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
     "node-sass": "4.13.0",
+    "prettier": "1.19.1",
     "react-hot-loader": "^4.12.16",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
     "style-loader": "^0.13.1",
-    "typescript": "^3.7.2",
     "ts-loader": "^4.3.1",
+    "typescript": "^3.7.2",
     "url-loader": "^0.5.7",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
