--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
-    "@types/react": "16.4.7",
+    "@types/react": "^16.8.25",
     "@types/react-router-dom": "^5.1.2",
+    "@types/theme-ui": "^0.2.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -44,7 +45,11 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
@@ -75,7 +80,6 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@mdx-js/react": "^1.5.1",
-    "@types/theme-ui": "^0.2.4",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
