--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
     "@types/react": "^16.8.25",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/theme-ui": "^0.2.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
@@ -91,11 +92,11 @@
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
-    "react-redux": "^5.0.6",
+    "react-redux": "^7.1.3",
     "react-router": "^3.2.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2",
     "theme-ui": "^0.2.46",
