--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
     "opds-feed-parser": "0.0.16",
+    "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
