--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.1",
@@ -44,7 +45,7 @@
     "babel-loader": "^8.0.6",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^6.7.2",
@@ -55,7 +56,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "fetch-mock": "^7.3.1",
-    "file-loader": "^3.0.1",
+    "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
@@ -68,10 +69,10 @@
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^1.1.2",
     "ts-loader": "^4.3.1",
     "typescript": "^3.7.2",
-    "url-loader": "^0.5.7",
+    "url-loader": "^3.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.7.2",
@@ -85,6 +86,7 @@
     "@emotion/styled": "^10.0.23",
     "@mdx-js/react": "^1.5.1",
     "@theme-ui/color": "^0.2.49",
+    "@theme-ui/components": "^0.2.50",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
@@ -106,7 +108,7 @@
     "theme-ui": "^0.2.46",
     "tinycolor2": "^1.4.1",
     "typeface-jomhuria": "0.0.61",
-    "typeface-oswald": "0.0.75",
+    "typeface-oswald": "^1.1.3",
     "universal-url": "^1.0.1"
   },
   "husky": {
@@ -120,7 +122,7 @@
       "git add"
     ],
     "*.{ts,tsx}": [
-      "eslint --fix",
+      "eslint --fix --quiet",
       "git add"
     ]
   }
