--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "node lib/server/index.js",
     "prod": "npm run build:server && npm run build:client:prod && npm run start",
     "dev": "npm run build:server && NODE_ENV=development npm run start",
-    "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js"
+    "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
+    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -32,6 +33,7 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.7.2",
     "@hot-loader/react-dom": "^16.11.0",
+    "@svgr/webpack": "^5.0.1",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.3",
@@ -66,6 +68,7 @@
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
     "react-hot-loader": "^4.12.16",
+    "react-svg-loader": "^3.0.3",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
