--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.1",
+    "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
     "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
