--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/react": "^16.8.25",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
-    "@types/theme-ui": "^0.2.5",
+    "@types/theme-ui": "^0.2.7",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -85,12 +85,11 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
-    "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
-    "@mdx-js/react": "^1.5.1",
     "@theme-ui/color": "^0.2.49",
     "@theme-ui/components": "^0.2.50",
     "bootstrap": "^3.3.6",
+    "downloadjs": "^1.4.7",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
@@ -99,18 +98,18 @@
     "opds-feed-parser": "0.0.16",
     "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-spinners": "^0.8.0",
-    "reakit": "^1.0.0-beta.13",
+    "reakit": "^1.0.0-beta.14",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2",
-    "theme-ui": "^0.2.46",
+    "theme-ui": "^0.3.1",
     "tinycolor2": "^1.4.1",
     "universal-url": "^1.0.1"
   },
