--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "NODE_ENV=production SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
     "prod": "npm run build:server && npm run build:client:prod && NODE_ENV=production npm run start",
     "dev": "npm run build:server && NODE_ENV=development npm run start",
-    "prod:amigos": "npm run build:server && npm run build:client:prod && ",
+    "prod:amigos": "npm run build:server && npm run build:client:prod",
     "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
   },
