--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:server": "tsc && cp -r src/stylesheets lib",
     "build:client:prod": "cp -r src/stylesheets lib && webpack -p --progress --display-modules --config webpack.prod.config",
     "build-prod": "npm run build:server && npm run build:client:prod",
-    "start": "NODE_ENV=production SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
+    "start": "NODE_ENV=production node lib/server/index.js",
+    "start:amigos": "SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
     "prod": "npm run build:server && npm run build:client:prod && NODE_ENV=production npm run start",
     "dev": "npm run build:server && NODE_ENV=development npm run start",
     "prod:amigos": "npm run build:server && npm run build:client:prod",
@@ -97,8 +98,7 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "file:.yalc/opds-web-client",
-    "opds-web-client-build": "git://github.com/NYPL-Simplified/opds-web-client.git#beta",
+    "opds-web-client": "^0.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
