--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:js:fix": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx --fix",
     "lint:sass": "sass-lint -c .sass-lint.yml -v -q",
     "test": "npm run lint:js && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
-    "build:server": "node_modules/typescript/bin/tsc && cp -r src/stylesheets lib",
+    "build:server": "tsc && cp -r src/stylesheets lib",
     "build:client:prod": "cp -r src/stylesheets lib && webpack -p --progress --display-modules --config webpack.prod.config",
     "build-prod": "npm run build:server && npm run build:client:prod",
     "start": "NODE_ENV=production node lib/server/index.js",
@@ -23,7 +23,8 @@
     "dev": "npm run build:server && NODE_ENV=development npm run start",
     "prod:amigos": "npm run build:server && npm run build:client:prod",
     "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
-    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
+    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
+    "heroku-postbuild": "npm run prod:amigos"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
