--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "^0.3.2",
+    "opds-web-client": "file:.yalc/opds-web-client",
+    "opds-web-client-build": "git://github.com/NYPL-Simplified/opds-web-client.git#beta",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
