--- a/package.json
+++ b/package.json
@@ -99,8 +99,7 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "file:.yalc/opds-web-client",
-    "opds-web-client-build": "git://github.com/NYPL-Simplified/opds-web-client.git#beta",
+    "opds-web-client": "github:NYPL-simplified/opds-web-client#opds-web-client-v0.3.3-gitpkg",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
