--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "prod:amigos": "npm run build:server && npm run build:client:prod",
     "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
-    "heroku-postbuild": "npm run prod:amigos"
+    "heroku-postbuild": "npm run prod:amigos",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -36,6 +38,13 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.7.2",
     "@hot-loader/react-dom": "^16.11.0",
+    "@storybook/addon-a11y": "^5.3.10",
+    "@storybook/addon-actions": "^5.3.10",
+    "@storybook/addon-links": "^5.3.10",
+    "@storybook/addon-storyshots": "^5.3.10",
+    "@storybook/addons": "^5.3.10",
+    "@storybook/preset-typescript": "^1.2.0",
+    "@storybook/react": "^5.3.10",
     "@svgr/webpack": "^5.0.1",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.6",
@@ -70,6 +79,7 @@
     "mocha": "^5.2.0",
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
+    "react-docgen-typescript-loader": "^3.6.0",
     "react-hot-loader": "^4.12.16",
     "react-svg-loader": "^3.0.3",
     "sass-lint": "^1.9.1",
