--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.7.2",
+    "@babel/register": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0",
     "@storybook/addon-a11y": "^5.3.10",
-    "@storybook/addon-actions": "^5.3.10",
+    "@storybook/addon-actions": "^5.3.12",
+    "@storybook/addon-console": "^1.2.1",
     "@storybook/addon-links": "^5.3.10",
     "@storybook/addon-storyshots": "^5.3.10",
     "@storybook/addons": "^5.3.10",
@@ -109,7 +111,7 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "github:NYPL-simplified/opds-web-client#opds-web-client-v0.3.3-gitpkg",
+    "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
