sign in works : )

--- a/package.json
+++ b/package.json
@@ -55,21 +55,21 @@
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/theme-ui": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "babel-loader": "^8.0.6",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "fetch-mock": "^7.3.1",
     "file-loader": "^5.0.2",
@@ -81,6 +81,7 @@
     "mocha": "^5.2.0",
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
+    "react-axe": "^3.3.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-hot-loader": "^4.12.16",
     "react-svg-loader": "^3.0.3",
@@ -89,7 +90,7 @@
     "sinon": "^7.3.0",
     "style-loader": "^1.1.2",
     "ts-loader": "^4.3.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
@@ -111,11 +112,12 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "github:NYPL-Simplified/opds-web-client#opds-web-client-v0.3.4-gitpkg",
+    "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.9.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-spinners": "^0.8.0",
