--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev": "npm run build:server && NODE_ENV=development npm run start",
     "prod:amigos": "npm run build:server && npm run build:client:prod",
     "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
+    "dev:brazoria": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=https://simplye.amigos.org/txbrazoria node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
     "heroku-postbuild": "npm run prod:amigos",
     "storybook": "start-storybook -p 6006",
@@ -112,7 +113,7 @@
     "jsdom": "^9.4.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "github:NYPL-Simplified/opds-web-client#opds-web-client-v0.3.4-gitpkg",
+    "opds-web-client": "file:.yalc/opds-web-client",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
