--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@emotion/styled": "^10.0.27",
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/components": "^0.3.1",
+    "@types/react-helmet": "^5.0.15",
     "bootstrap": "^3.3.6",
     "downloadjs": "^1.4.7",
     "express": "^4.14.0",
@@ -118,6 +119,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.12.0",
+    "react-helmet-async": "^1.0.4",
     "react-hook-form": "^4.9.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
