--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prod:amigos": "npm run build:server && npm run build:client:prod",
     "dev:amigos": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=http://simplye-dev-cm.amigos.org/xyzlib node lib/server/index.js",
     "dev:brazoria": "npm run build:server && NODE_ENV=development SIMPLIFIED_CATALOG_BASE=https://simplye.amigos.org/txbrazoria node lib/server/index.js",
+    "dev:config": "npm run build:server && NODE_ENV=development CONFIG_FILE=./config_file.txt node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
     "heroku-postbuild": "npm run prod:amigos",
     "storybook": "start-storybook -p 6006",
