begin jest migration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "lib",
     "lib": ["es2017", "dom"],
     "rootDir": "src",
-    "types": ["mocha", "node"],
+    "types": ["jest", "node"],
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
