--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:js": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx",
     "lint:js:fix": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx --fix",
     "lint:sass": "sass-lint -c .sass-lint.yml -v -q",
-    "test": "npm run lint:js && tsc && cp -r src/stylesheets lib && mocha --require lib/testHelper.js lib/__tests__/*.js lib/**/__tests__/*.js lib/**/**/__tests__/*.js",
+    "test": "jest",
+    "test:watch": "jest -w",
     "build:server": "tsc && cp -r src/stylesheets lib",
     "build:client:prod": "cp -r src/stylesheets lib && webpack -p --progress --display-modules --config webpack.prod.config",
     "build-prod": "npm run build:server && npm run build:client:prod",
@@ -28,7 +29,8 @@
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
     "heroku-postbuild": "npm run prod:amigos",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "jest": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -51,7 +53,8 @@
     "@storybook/react": "^5.3.12",
     "@svgr/webpack": "^5.0.1",
     "@types/express": "^4.17.2",
-    "@types/mocha": "^5.2.6",
+    "@types/jest": "^25.1.3",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^12.12.3",
     "@types/react": "^16.8.25",
     "@types/react-redux": "^7.1.6",
@@ -60,12 +63,13 @@
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "chai": "^3.5.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react": "^1.1.7",
@@ -78,9 +82,10 @@
     "fork-ts-checker-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
+    "jest": "^25.1.0",
     "lint-staged": "^9.5.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^5.2.0",
+    "mocha": "^7.0.1",
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
     "react-axe": "^3.3.0",
@@ -91,7 +96,8 @@
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.0",
     "style-loader": "^1.1.2",
-    "ts-loader": "^4.3.1",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.29.6",
@@ -129,7 +135,6 @@
     "reakit": "^1.0.0-beta.16",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2",
     "styled-system": "^5.1.2",
     "theme-ui": "^0.3.1",
     "tinycolor2": "^1.4.1",
@@ -152,5 +157,16 @@
   },
   "engines": {
     "node": "13.x"
+  },
+  "mocha": {
+    "spec": "src/**/__tests__/*.ts",
+    "require": [
+      "ts-node/register",
+      "src/testHelper.ts"
+    ],
+    "extension": [
+      "ts",
+      "tsx"
+    ]
   }
 }
