--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.12",
     "@svgr/webpack": "^5.0.1",
+    "@testing-library/react": "^9.4.1",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/mocha": "^7.0.1",
