--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.12",
     "@svgr/webpack": "^5.0.1",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
@@ -116,6 +117,7 @@
     "@theme-ui/match-media": "^0.3.1",
     "@types/react-helmet": "^5.0.15",
     "bootstrap": "^3.3.6",
+    "deepmerge": "^4.2.2",
     "downloadjs": "^1.4.7",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
