--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@svgr/webpack": "^5.0.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^10.0.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/mocha": "^7.0.1",
