--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:js:fix": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx --fix",
     "lint:sass": "sass-lint -c .sass-lint.yml -v -q",
     "test": "jest",
-    "test:watch": "jest -w",
+    "test:watch": "jest --watch",
     "build:server": "tsc && cp -r src/stylesheets lib",
     "build:client:prod": "cp -r src/stylesheets lib && webpack -p --progress --display-modules --config webpack.prod.config",
     "build-prod": "npm run build:server && npm run build:client:prod",
@@ -123,7 +123,7 @@
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "^9.4.1",
+    "jsdom": "^16.2.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
     "opds-web-client": "github:NYPL-simplified/opds-web-client#opds-web-client-v0.3.7-gitpkg",
