--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "downloadjs": "^1.4.7",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
+    "history": "^4.10.1",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^16.2.1",
     "moment": "^2.24.0",
