--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "deepmerge": "^4.2.2",
     "downloadjs": "^1.4.7",
     "express": "^4.14.0",
+    "fetch-mock-jest": "^1.2.4",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "isomorphic-fetch": "^2.2.1",
