--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
     "jest": "^25.1.0",
+    "jest-emotion": "^10.0.32",
     "lint-staged": "^9.5.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^7.0.1",
