--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@svgr/webpack": "^5.0.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^10.0.0",
+    "@types/enzyme": "^3.10.5",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/mocha": "^7.0.1",
