--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "jsdom": "^16.2.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "github:NYPL-simplified/opds-web-client#opds-web-client-v0.3.7-gitpkg",
+    "opds-web-client": "^0.3.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
