--- a/package.json
+++ b/package.json
@@ -131,11 +131,11 @@
     "jsdom": "^16.2.1",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
-    "opds-web-client": "^0.3.6",
+    "opds-web-client": "github:NYPL-simplified/opds-web-client#opds-web-client-v0.3.6-gitpkg",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.4",
     "react-hook-form": "^4.9.2",
     "react-redux": "^7.2.0",
